--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.1
   cupertino_icons: ^1.0.6
-  shared_preferences: ^2.2.3
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
